--- a/EVAL_VAD.ipynb
+++ b/EVAL_VAD.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "f57db379",
    "metadata": {},
    "outputs": [],
@@ -20,13 +20,13 @@
     "fref = './annotations/vad/tv-TF1-20220218T133551-60.csv'\n",
     "fpred = './annotations/baseline_iss_vad/tv-TF1-20220218T133551-60.csv'\n",
     "dref = './annotations/vad/'\n",
-    "dpred = './annotations/baseline_iss_vad/'"
+    "dpred = './automatic_baselines/inaspeechsegmenter'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a3c55f28",
+   "id": "5407fd59-d0c6-4df5-bc92-21dd45bd1c38",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "f1c94649",
    "metadata": {},
    "outputs": [],
@@ -104,8 +104,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "8f797018",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.9000190147276357,\n",
+       " 'precision': 0.8781008162547089,\n",
+       " 'recall': 0.9681124848993548,\n",
+       " 'fmeasure': 0.9209124023590365}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# see result summary\n",
+    "summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6bd79baa-f122-4202-a2ad-a6581e310e75",
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
